syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acm.reducemap.master";
option java_generic_services = false;
//option java_outer_classname = "MasterProto";
option objc_class_prefix = "RMM";

package reducemap.master;

// master service
service Master {
  // worker register at master
  rpc Register (RegisterRequest) returns (RegisterReply) {}
  // worker send liveness info to master
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatReply) {}

  //client calls
  // client send new work demand to master
  rpc NewWork (NewWorkRequest) returns (NewWorkReply) {}
  // client send do work command to master
  rpc Execute (ExecuteRequest) returns (ExecuteReply) {}
}

// register request message to master
message RegisterRequest {
    string ip_address = 1;
}

// register reply message to worker
message RegisterReply {
    int32 worker_id = 1;
}

// heartbeat request message to master
message HeartbeatRequest {
    int32 worker_id = 1;
//    int32 timestamp = 2;
    int32 status = 3;
    string ip_address = 4;
}

// heartbeat reply message to worker
message HeartbeatReply {
    int32 status = 1;
}

message NewWorkRequest {
    string name = 1;
    string exec_handle = 2; //could be path to exec or just code
}

message NewWorkReply {
    int32 work_type = 1;
}

message ExecuteRequest {
    int32 work_type = 1;
    string param_handle = 2;
}

message ExecuteReply {
    int32 status = 1;
    string result_handle = 2; //path to result file
}
